<resources>
    <string name="app_name" translatable="false">DiChung</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="account_information">Account Information</string>
    <string name="language">Language</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="notification">Notification</string>
    <string name="error">Error</string>
    <string name="internet_problem">Connect to the internet and restart the application</string>
    <string name="wait">Please wait </string>
    <string name="successfully_signed_in">Successfully signed in. Welcome!</string>
    <string name="map">MAP</string>
    <string name="people">PEOPLE</string>
    <string name="setting">SETTING</string>
    <string name="loading">Loading ...</string>
    <string name="loading1_2">Loading ...(1/2)</string>
    <string name="loading2_2">Loading ...(2/2)</string>
    <string name="km">km</string>
    <string name="mins">mins</string>
    <string name="min">0 min</string>
    <string name="touch_refresh">Touch REFRESH button for reloading</string>
    <string name="gps_problem">Turn on GPS and restart the application</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="major">Major</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="me">Me</string>
    <string name="phone_problem">Your phone number is still empty</string>
    <string name="update_success">Successfully update information</string>
    <string name="select_picture">Select Picture</string>
    <string name="next">Next</string>
    <string name="phone_hint">Phone number</string>
    <string name="major_hint">Major</string>
    <string name="birthday_hint">Birthday</string>
    <string name="status_hint">Description / status</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="laos">Laos</string>
    <string name="change_language">Change</string>
    <string name="change_problem">No language is selected!</string>
    <string name="not_supported">This language has not been supported yet</string>
    <string name="bye">See you later, </string>
    <string name="type_of_view">Type of view</string>
    <string name="refresh">Tap to refresh</string>
    <string name="shortest_route">Show the shortest route for both</string>
    <string name="call">Call this person</string>
    <string name="send_sms">Message this person</string>
    <string name="direction_recommend">This person is now far away from you. Therefore the route for both of you might not be effective. We recommend you not to go!</string>
    <string name="location_update">Your location has just updated</string>
    <string name="no_phone">No phone number selected</string>
    <string name="km_">0 km</string>

</resources>
