<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_shape"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_weight="0.30">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/buttonTextColor"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/round_shape_stroke"
                            android:onClick="changeAvatar"
                            app:srcCompat="@drawable/unknown_person_icon" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/mobile_phone_icon" />

                            <EditText
                                android:id="@+id/txtPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="260"
                                android:ems="10"
                                android:hint="@string/phone_hint"
                                android:inputType="phone" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:onClick="chooseGender"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/radioFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:onClick="chooseGender"
                                android:text="@string/female" />

                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="8dp"
                        app:srcCompat="@drawable/major_icon" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/major_hint"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerMajor"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:contextClickable="false"
                        android:elevation="1dp"
                        android:entries="@array/major_array"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        app:srcCompat="@drawable/birthday_icon" />

                    <EditText
                        android:id="@+id/txtDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="1dp"
                        android:ems="10"
                        android:hint="@string/birthday_hint"
                        android:inputType="date"
                        android:onClick="chooseDate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="55dp"
                        app:srcCompat="@drawable/status_icon" />

                    <EditText
                        android:id="@+id/txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fadeScrollbars="false"
                        android:hint="@string/status_hint"
                        android:inputType="textMultiLine"
                        android:lines="10"
                        android:scrollbars="vertical" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout2"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button_states"
                    android:elevation="24dp"
                    android:onClick="doBack"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button_states"
                    android:elevation="24dp"
                    android:onClick="doNext"
                    android:text="@string/next" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>